# nexus-gateway

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .redocly.yaml  .secret-scan-allow  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  go.work  nexus-gateway.sln  package-lock.json  package.json
.claude/: settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmark/: README.md  preflight.py  requirements.txt  run.py  run_benchmark.py
docs/: README.md
examples/: README.md
nexus-ami/: .current-build-ts  .last-build-log  README.md  build.sh  nexus.pkr.hcl
scripts/: .core-path-100  .coverage-allowlist  .file-size-baseline  .file-size-waivers  check-arch-doc-triggers.mjs  check-brand-strings.mjs  check-core-path-coverage.sh  check-design-tokens.mjs  check-doc-lockstep.mjs  check-e2e-matrix-refs.mjs  check-e86-matrix-refs.mjs  check-effect-tokens.mjs  check-file-size-ratchet.sh  check-go-coverage.sh  check-hardcoded-agent-paths.mjs  check-i18n-parity.mjs  check-iam-route-coverage.mjs  check-jobs-catalogue.sh  check-json-dupkeys.mjs  check-keystore-seam.sh  check-migration-timestamps.sh  check-rename.sh  (+19 more)
tests/e2e-python/: README.md  conftest.py  pyproject.toml
tests/e2e-python/ai_judge/: judge.py  test_judge_smoke.py  test_pii_detection.py
tests/e2e-python/protocol/: conftest.py  test_anthropic_compat.py  test_embeddings_compat.py  test_openai_compat.py  test_responses_compat.py
(+794 files in other folders)
